Fixed spacing in Mobile Mode

--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ nav{
 .nav-links{
     grid-gap: 2rem;
     display: flex;
-    transition: grid-gap 2s;
+    transition: grid-gap-column 2s;
 }
 .nav-links a{
   color: white;
@@ -72,9 +72,9 @@ nav{
 }
 .nav-links a > div:active{
   border-radius: 11px;
-  background: #fcb6b6;
-  box-shadow: inset 5px 5px 5px #d99d9d,
-            inset -5px -5px 5px #ffcfcf;
+  background: linear-gradient(145deg, #e3a4a4, #ffc3c3);
+  box-shadow:  5px 5px 5px #d99d9d,
+               -5px -5px 5px #ffcfcf;
 }
 
 /* TODO: Add Animation to hover and active effect for box-insets */
@@ -114,19 +114,22 @@ nav{
 
   .nav-links{
     position: fixed;
+    display: flex;
+    gap: 6rem;
     inset: 0 0 0 65%;
-
+    align-items: center;
     flex-direction: column;
     padding: min(20vh, 10rem) 2rem;
-    background: hsl(0, 0%, 100%, 0.2);
-    backdrop-filter: blur(0.3rem);
+    background: hsl(0, 0%, 100%, 0.4);
   }
 
-  .nav-links li{
-    /* background: hsl(0, 0%, 100%, 0.2);
-    backdrop-filter: blur(0.3rem); */
-    opacity: 1;
+  @supports (backdrop-filter: blur(0.3rem)) {
+    .nav-links{
+      background: hsl(0, 0%, 100%, 0.2);
+      backdrop-filter: blur(0.3rem);
+    }
   }
+
   .nav-links a{
     background: hsl(0, 0%, 100%, 0.2);
     backdrop-filter: blur(0.3rem);
